# forecast

./: README.md  requirements.txt  setup.cfg
forecast/: __init__.py  data.py  forecast.py
notebooks/: dev-deepar.ipynb  dev-feedforward.ipynb  forecast-deepar.ipynb  forecast-with-synthetic-data.ipynb
