[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[bumpversion:file:forecast/__init__.py]

[metadata]
name = forecast
namespace_packages = forecast
version = attr: forecast.__version__
author = Chu Lahlou
author_email = ChuLahlou@Microsoft.com
description = Time Series Forecasting
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
